cli/tests/lit/parse-error.lit
# SPDX-FileCopyrightText: © 2021 ChiselStrike <info@chiselstrike.com>

# RUN: sh -e @file

cat << EOF > "$TEMPDIR/endpoints/error.ts"
export default async function chisel(req) {
    return new Response("foo" "bar");
}
EOF

cd "$TEMPDIR"

$CHISEL apply 2>&1 || true
# CHECK: Error: parsing endpoint /dev/error
# CHECK: TypeError: Parse failed: error: Expected ',', got 'string literal (bar)'
# CHECK: 2 |     return new Response("foo" "bar");

cat << EOF > "$TEMPDIR/endpoints/error.ts"
const xyz = foo();
export default async function chisel(req) {
    return xyz;
}
EOF

$CHISEL apply 2>&1 || true
#CHECK: Error: parsing endpoint /dev/error
#CHECK: Caused by:
#CHECK:     Uncaught ReferenceError: foo is not defined
#CHECK:         at file://$chisel$/dev/error?ver=1:1:12
